--- a/intro-flutter/redit_clone/pubspec.yaml
+++ b/intro-flutter/redit_clone/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   go_router: ^14.8.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +60,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/logo/logo-is.jpg
+    - assets/logo/logo-is-2.jpg
+    # - assets/logo/logo-is-2.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
