--- a/intro-flutter/redit_clone/pubspec.yaml
+++ b/intro-flutter/redit_clone/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.8.1
   cached_network_image: ^3.4.1
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
