--- a/intro-flutter/firebase_app/pubspec.yaml
+++ b/intro-flutter/firebase_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_messaging: ^15.2.4
   cloud_firestore: ^5.6.5
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
