--- a/intro-flutter/firebase_app/pubspec.yaml
+++ b/intro-flutter/firebase_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.5.2
   google_sign_in: ^6.3.0
+  firebase_storage: ^12.4.5
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
